--- a/index.html
+++ b/index.html
@@ -268,9 +268,11 @@
                                 <div className="bg-white p-6 rounded-lg shadow-lg">
                                     <h3 className="text-xl font-bold mb-3">Próximos Eventos</h3>
                                     <ul className="space-y-2 mb-6">
-                                        <li></li>
-                                        <li>Asamblea Congregacional - Mayo 2025</li>
-                                        <li>Campaña Evangelística/Arde La Victoria - Abril 2025</li>
+                                        <li><a href="">Campaña Evangelistica - 2025</a></li>
+                                        <li><a href="">Visita a Hospitales - Junio</a></li>
+                                        <li><a href="">Evanvelismo Juvenil - Julio</a></li>
+                                        <li><a href="">Cruzada Evangelistica - septiembre</a></li>
+
                                     </ul>
                                 </div>
                             </div>
@@ -341,22 +343,14 @@
                                 </div>
                                 <div className="bg-white p-4 rounded-lg shadow-lg text-center">
                                     <img 
-                                        src="https://scontent.fasu8-2.fna.fbcdn.net/v/t39.30808-6/473694120_122131479206380640_2764680219794390473_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHemvq7KPJvrk-Oes9Sgc4lFBA6HqWgZTIUEDoepaBlMjE1W_-FGpyFZc9WbbKYUBcefmM1qhU1GBBQCYYPI9jR&_nc_ohc=UlOq4uGMTTwQ7kNvgFfXHyd&_nc_oc=AdlJww1Emrs32Av92ND240VLRJ-Nvj-WFkm35U-GuEkt-Aos2E-DxRbYVaaB3QVi0Y5MushpyP2exPmNjfk4Rbwb&_nc_zt=23&_nc_ht=scontent.fasu8-2.fna&_nc_gid=KYYvCbFQw9bxXjjoFKGV4Q&oh=00_AYGHHTPQQjrMx2KipxYrItgqKzaBJjS4g3aoy1DQuoTOgA&oe=67F28766g" 
+                                        src="https://scontent.fasu6-2.fna.fbcdn.net/v/t39.30808-6/473694120_122131479206380640_2764680219794390473_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHemvq7KPJvrk-Oes9Sgc4lFBA6HqWgZTIUEDoepaBlMjE1W_-FGpyFZc9WbbKYUBcefmM1qhU1GBBQCYYPI9jR&_nc_ohc=UlOq4uGMTTwQ7kNvgETOCod&_nc_oc=AdmsrPpl-T8vzWOC-1tQgE0qnt_HnqfV3NWlYTkSJtRnwxK_fBunG42aNJYOdzn0bWY&_nc_zt=23&_nc_ht=scontent.fasu6-2.fna&_nc_gid=rqCCVyHYPl9rpDZW3GQ21A&oh=00_AYEQGcPlqX41k6l6RR3pthlEP3rnI6OYBvhJgSzF4B0JgQ&oe=67F33026" 
                                         alt="Líder"
                                         className="w-32 h-32 object-cover rounded-full mx-auto mb-3"
                                     />
                                     <h4 className="font-bold mb-1">Jesus Guerrero</h4>
                                     <p className="text-sm text-gray-600">Ministerio de Multimedia</p>
                                 </div>
-                                <div className="bg-white p-4 rounded-lg shadow-lg text-center">
-                                    <img 
-                                        src="placeholder-image.jpg" 
-                                        alt="Líder"
-                                        className="w-32 h-32 object-cover rounded-full mx-auto mb-3"
-                                    />
-                                    <h4 className="font-bold mb-1">Laura noguera</h4>
-                                    <p className="text-sm text-gray-600">Ministerio de Alabanza</p>
-                                </div>
+
                                 {/* Continue with more leader cards */}
                             </div>
                         </div>
