--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <div className="flex justify-between items-center h-16">
                                 <div className="flex items-center space-x-3">
                                     <img 
-                                        src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-1/326346983_875115313706020_3718573300098376225_n.jpg?stp=dst-jpg_s160x160_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_eui2=AeHFY9S0KH9Wy8E2FEYhc7p4_Bs4C5Yj66D8GzgLliProOjByCy4YTXJx0gQJTeQFYE7N8opY6368cO6JAR97mbz&_nc_ohc=TxBOQLcUbK8Q7kNvgGbGEJN&_nc_oc=Adk_RUkd4a8XQBD08983WhpVloNIImjdVMIkd4Vr1QL7JrlylwwRU05Idh9G7zSFU7c&_nc_zt=24&_nc_ht=scontent.fasu6-1.fna&_nc_gid=myhfC1oE9qUqF2FCvtvCZA&oh=00_AYEKv9NBwsB38m_KgKZEiEJiux580glHJtXe6O0CuIn7vQ&oe=67F09E5A"
+                                        src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-1/326346983_875115313706020_3718573300098376225_n.jpg?stp=dst-jpg_s160x160_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_eui2=AeHFY9S0KH9Wy8E2FEYhc7p4_Bs4C5Yj66D8GzgLliProOjByCy4YTXJx0gQJTeQFYE7N8opY6368cO6JAR97mbz&_nc_ohc=TxBOQLcUbK8Q7kNvgGbGEJN&_nc_oc=Adk_RUkd4a8XQBD08983WhpVloNIImjdVMIkd4Vr1QL7JrlylwwRU05Idh9G7zSFU7c&_nc_zt=24&_nc_ht=scontent.fasu6-1.fna&_nc_gid=myhfC1oE9qUqF2FCvtvCZA&oh=00_AYEKv9NBwsB38m_KgKZEiEJiux580glHtXe6O0CuIn7vQ&oe=67F09E5A"
                                         alt="Logo Iglesia"
                                         className="h-12 w-12 rounded-full"
                                     />
@@ -93,9 +93,9 @@
                                             className="block px-3 py-2 rounded-md text-white hover:bg-blue-700 w-full text-left">
                                         Eventos
                                     </button>
-                                    <button onClick={() => {setActiveSection('galeria'); setIsMenuOpen(false)}} 
+                                    <button onClick={() => {setActiveSection('ministerial'); setIsMenuOpen(false)}} 
                                             className="block px-3 py-2 rounded-md text-white hover:bg-blue-700 w-full text-left">
-                                        Galería
+                                        Cuerpo Ministerial
                                     </button>
                                 </div>
                             )}
