--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
                     <main className="max-w-7xl mx-auto px-4 py-6">
                         {activeSection === 'inicio' && (
                             <div className="text-center">
-                                <h2 className="text-3xl font-bold mb-4">Bienvenidos a nuestra Iglesia</h2>
+                                <h2 className="text-3xl font-bold mb-10">Bienvenidos a nuestra Iglesia</h2>
                                 <img 
                                     src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
                                     alt="Iglesia Cristiana La Victoria" 
                                     className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
                                 />
-                                <p className="text-lg mb-6">Un lugar de adoración, comunión y crecimiento espiritual</p>
+                                <p className="text-lg mb-10">Un lugar de adoración, comunión y crecimiento espiritual</p>
                                 <div className="bg-white p-6 rounded-lg shadow-lg">
-                                    <h3 className="text-xl font-bold mb-3">Horarios de Servicios</h3>
+                                    <h3 className="text-xl font-bold mb-10">Horarios de Servicios</h3>
                                     <p>Domingos: 10:00 AM - Servicio Principal</p>
                                 </div>
-                                <h2 className="text-3xl font-bold mb-4">Bienvenidos a nuestra Iglesia</h2>
+                                <h2 className="text-3xl font-bold mb-8">Bienvenidos a nuestra Iglesia</h2>
                                 <img 
                                     src="https://scontent.fasu8-2.fna.fbcdn.net/v/t39.30808-6/486131131_1099994635501163_7590683894316209257_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeF3xUSa7sfnhVKF7kgqaoG3UEGN0bxfViZQQY3RvF9WJo73YwODiyHXM6IwZc93-Aw3ZAMhC6a7tVtrQlfDQ02b&_nc_ohc=VWaNv9gGnpUQ7kNvgHQ8JC0&_nc_oc=AdnEWIj_SHzwuXPaRjx6pOuhfqRgAzJJyOOpqRsfP1pNpJ3Lbp1PBcuMf23GohadsdkP6hjFPtgj3SuJYRsqSjEf&_nc_zt=23&_nc_ht=scontent.fasu8-2.fna&_nc_gid=90gRQfsZ_eGbNTx3W-UcUg&oh=00_AYG5F9DDp4BEg3Jubt5fJTthDqsi886tUgIbnYafHi1Ung&oe=67F34A9C" 
                                     alt="Iglesia Cristiana La Victoria" 
@@ -125,7 +125,7 @@
                                 />
                                 <p className="text-lg mb-6 tex-2xl">Participa de nuestra enseñanza de Guerra Espíritual</p>
                                 <div className="bg-white p-6 rounded-lg shadow-lg">
-                                    <h3 className="text-xl font-bold mb-3">Horarios</h3>
+                                    <h3 className="text-xl font-bold mb-8">Horarios</h3>
                                     <p>Miercoles: 9:00 PM</p>
                                 </div>
                                 <h2 className="text-3xl font-bold mb-4">Bienvenidos a nuestra Iglesia</h2>
@@ -135,7 +135,7 @@
                                     className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
                                 />
                                 <p className="text-lg mb-6">Porque donde están dos o tres congregados en mi nombre, allí estoy yo en medio de ellos.</p>
-                                <div className="bg-white p-6 rounded-lg shadow-lg">
+                                <div className="p-6 rounded-lg shadow-lg">
                                     <h3 className="text-xl font-bold mb-3">Mateo 18:20</h3>
                                     <p>Ven y se parte del Cuerpo de Cristo</p>
                                 </div>
@@ -324,25 +324,15 @@
     </script>
 </body>
    
-<footer className="bg-blue-800 text-white mt-12 py-8">
-    <div className="max-w-7xl mx-auto px-4">
-        <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div>
-                <h4 className="text-xl font-bold mb-4">Contacto</h4>
+<footer class="alinear">
+            <div >
+                <h4 className="">Contacto</h4>
                 <p className="mb-2">📍Avda. La victoria/Samuhu Barrio San Pablo, Asuncion</p>
                 <p className="mb-2">📞 +595 981 123456</p>
                 <p>✉️ iglesiacristianalaVictoria@gmail.com</p>
             </div>
-            <div>
-                <h4 className="text-xl font-bold mb-4">Horarios</h4>
-                <p className="mb-2">Domingo: 10:00 AM</p>
-                <p className="mb-2">Martes: 7:00 PM</p>
-                <p className="mb-2">Miércoles: 9:00 PM</p>
-                <p className="mb-2">Viernes: 7:30 PM</p>
-            </div>
-            <div class="alinear">
-                <h4 className="text-xl font-bold mb-4">Síguenos</h4>
-                <div class="redes">
+            <div class="redes">
+                    <h4 className="">Síguenos: </h4>
                     <a href="https://www.facebook.com/iglesialavictoriapy" target="_blank">
                         <img src="https://cdn-icons-png.freepik.com/256/3579/3579093.png?semt=ais_hybrid" alt="">
                     </a>
@@ -352,13 +342,8 @@
                     <a href="https://wa.me/595985723153" target="_blank">
                         <img src="https://cdn-icons-png.freepik.com/256/733/733585.png?semt=ais_hybrid" alt="">
                     </a>
-                </div>
+                    <p>© 1958 Iglesia Cristiana La Victoria. Todos los derechos reservados.</p>
             </div>
-        </div>
-        <div className="text-center mt-8 pt-8 border-t border-blue-700">
-            <p>© 1958 Iglesia Cristiana La Victoria. Todos los derechos reservados.</p>
-        </div>
-    </div>
 </footer>
 </html>
 
