--- a/index.html
+++ b/index.html
@@ -105,51 +105,39 @@
                     {/* Content Sections */}
                     <main className="max-w-7xl mx-auto px-4 py-6">
                         {activeSection === 'inicio' && (
-                            <div className="text-center">
-                                <h2 className="text-3xl font-bold mb-10">Bienvenidos a nuestra Iglesia</h2>
+                            <div className="mb-6 flex flex-col">
+                             
+                                <div className="bg-white p-6 rounded-lg shadow-lg w-max mx-auto">   
                                 <img 
                                     src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
                                     alt="Iglesia Cristiana La Victoria" 
                                     className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
                                 />
                                 <p className="text-lg mb-10">Un lugar de adoración, comunión y crecimiento espiritual</p>
-                                <div className="bg-white p-6 rounded-lg shadow-lg">
                                     <h3 className="text-xl font-bold mb-10">Horarios de Servicios</h3>
                                     <p>Domingos: 10:00 AM - Servicio Principal</p>
                                 </div>
-                                <h2 className="text-3xl font-bold mb-8">Bienvenidos a nuestra Iglesia</h2>
+                                <div className="bg-white p-6 rounded-lg shadow-lg w-max mx-auto">   
                                 <img 
-                                    src="https://scontent.fasu8-2.fna.fbcdn.net/v/t39.30808-6/486131131_1099994635501163_7590683894316209257_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeF3xUSa7sfnhVKF7kgqaoG3UEGN0bxfViZQQY3RvF9WJo73YwODiyHXM6IwZc93-Aw3ZAMhC6a7tVtrQlfDQ02b&_nc_ohc=VWaNv9gGnpUQ7kNvgHQ8JC0&_nc_oc=AdnEWIj_SHzwuXPaRjx6pOuhfqRgAzJJyOOpqRsfP1pNpJ3Lbp1PBcuMf23GohadsdkP6hjFPtgj3SuJYRsqSjEf&_nc_zt=23&_nc_ht=scontent.fasu8-2.fna&_nc_gid=90gRQfsZ_eGbNTx3W-UcUg&oh=00_AYG5F9DDp4BEg3Jubt5fJTthDqsi886tUgIbnYafHi1Ung&oe=67F34A9C" 
+                                    src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
                                     alt="Iglesia Cristiana La Victoria" 
                                     className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
                                 />
-                                <p className="text-lg mb-6 tex-2xl">Participa de nuestra enseñanza de Guerra Espíritual</p>
-                                <div className="bg-white p-6 rounded-lg shadow-lg">
-                                    <h3 className="text-xl font-bold mb-8">Horarios</h3>
-                                    <p>Miercoles: 9:00 PM</p>
+                                <p className="text-lg mb-10">Un lugar de adoración, comunión y crecimiento espiritual</p>
+                                    <h3 className="text-xl font-bold mb-10">Horarios de Servicios</h3>
+                                    <p>Domingos: 10:00 AM - Servicio Principal</p>
                                 </div>
-                                <h2 className="text-3xl font-bold mb-4">Bienvenidos a nuestra Iglesia</h2>
+                                <div className="bg-white p-6 rounded-lg shadow-lg w-max mx-auto">   
                                 <img 
-                                    src="https://scontent.fasu8-1.fna.fbcdn.net/v/t39.30808-6/486555240_1096377329196227_6402852132839402151_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeF66oIUIh6wLY8iOCgoSal65gmdotLl4NLmCZ2i0uXg0peHXg0qLe4mHUUbG5ibwPNfrOd7ZK0LQWPgHNI7Tt_3&_nc_ohc=9Ma7ae5op7cQ7kNvgEvSS7F&_nc_oc=AdmeOW1nmzzzC9hxWjX6jR-yRV02qSQTb66undeA-N8TxFJkFB0pcWmXQnU5UXFc1I-RhzuhslACytCSWsEK53WH&_nc_zt=23&_nc_ht=scontent.fasu8-1.fna&_nc_gid=KtHrbNY7CMfQVXQhMj6DjQ&oh=00_AYFaj358a1gH1Z51rF_gMEdy17z1ApaXpGlQRnKP-zBLtQ&oe=67F33562" 
+                                    src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
                                     alt="Iglesia Cristiana La Victoria" 
                                     className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
                                 />
-                                <p className="text-lg mb-6">Porque donde están dos o tres congregados en mi nombre, allí estoy yo en medio de ellos.</p>
-                                <div className="p-6 rounded-lg shadow-lg">
-                                    <h3 className="text-xl font-bold mb-3">Mateo 18:20</h3>
-                                    <p>Ven y se parte del Cuerpo de Cristo</p>
+                                <p className="text-lg mb-10">Un lugar de adoración, comunión y crecimiento espiritual</p>
+                                    <h3 className="text-xl font-bold mb-10">Horarios de Servicios</h3>
+                                    <p>Domingos: 10:00 AM - Servicio Principal</p>
                                 </div>
-                                <h2 className="text-3xl font-bold mb-4">Bienvenidos a nuestra Iglesia</h2>
-                                <img 
-                                    src="https://scontent.fasu8-2.fna.fbcdn.net/v/t39.30808-6/471228264_1023039763196651_8159902938971517438_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHlPGpbxm4E-8bVT-YhI7vSIh9ZQPqs0EgiH1lA-qzQSOsAC9n0yU_fY_TuJ9TT-3YVlxTdd_jG0gZiF6T1RcJV&_nc_ohc=iqVEXhxy_ooQ7kNvgGMvbgN&_nc_oc=AdmsSbV42UgcGWYC6pTwE7xpLnyADl11JtxDUA9FAvcvhljYDy2zI3OHHZqxRWtR2CcKrBxc3d-jNqK5yGRiaQLb&_nc_zt=23&_nc_ht=scontent.fasu8-2.fna&_nc_gid=f9i_UpehnDa0SxtlHKVV1g&oh=00_AYEIkyGBYuvHUguoYywR2Osww497rH_1cLvd11Q9HNJAPg&oe=67F33BE8" 
-                                    alt="Iglesia Cristiana La Victoria" 
-                                    className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
-                                />
-                                <p className="text-lg mb-6">Jesus te ama</p>
-                                <div className="bg-white p-6 rounded-lg shadow-lg">
-                                    <h3 className="text-xl font-bold mb-3">Juan 3:16</h3>
-                                    <p></p>
-                                </div>
+                            
                             </div>
                         )}
                             {activeSection === 'servicios' && (
