--- a/index.html
+++ b/index.html
@@ -105,37 +105,36 @@
                     {/* Content Sections */}
                     <main className="max-w-7xl mx-auto px-4 py-6">
                         {activeSection === 'inicio' && (
-                            <div className="mb-6 flex flex-col">
-                             
+                            <div className="mb-6 flex flex-col space-y-16">
                                 <div className="bg-white p-6 rounded-lg shadow-lg w-max mx-auto">   
-                                <img 
-                                    src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
-                                    alt="Iglesia Cristiana La Victoria" 
-                                    className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
-                                />
+                                    <img 
+                                        src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
+                                        alt="Iglesia Cristiana La Victoria" 
+                                        className="w-full max-w-2xl mx-auto rounded-lg shadow-lg mb-6"
+                                    />
                                 <p className="text-lg mb-10">Un lugar de adoración, comunión y crecimiento espiritual</p>
                                     <h3 className="text-xl font-bold mb-10">Horarios de Servicios</h3>
                                     <p>Domingos: 10:00 AM - Servicio Principal</p>
                                 </div>
-                                <div className="bg-white p-6 rounded-lg shadow-lg w-max mx-auto">   
+                                <div className="bg-white p-6 rounded-lg shadow-lg w-max mx-auto" id="solo-img">   
                                 <img 
-                                    src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
+                                    src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486617262_1092862926214334_3031420025094590785_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHZJV35rizwcnPE2cr9nolW-_1Rk7dE6aj7_VGTt0TpqDxOGyeBw6NRBgsD8vYedFp2ZsLRzQg83r7hPZjvKgCe&_nc_ohc=VTi2f63owCsQ7kNvgFRxIrC&_nc_oc=Adk5iONxHMtOgU5vaE9--CRWOj6sODNKsw_iEBZS8orrdL3Cd3wmjMpPX6s3O3KttVk&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=cgH_8OBTgWyILTkHGr6xqQ&oh=00_AYHhV1NNUe9Utl3l5vdoxNfDF4pSRMrEf0-f_uCPt7LRdg&oe=67F099E1" 
                                     alt="Iglesia Cristiana La Victoria" 
-                                    className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
+                                    className="w-full max-w-2xl mx-auto rounded-lg shadow-lg mb-6"
                                 />
-                                <p className="text-lg mb-10">Un lugar de adoración, comunión y crecimiento espiritual</p>
-                                    <h3 className="text-xl font-bold mb-10">Horarios de Servicios</h3>
-                                    <p>Domingos: 10:00 AM - Servicio Principal</p>
+                                <p className="text-lg mb-10">Estudio</p>
+                                    <h3 className="text-xl font-bold mb-10">Enseñanza de Liberacion y Guerra Espiritual</h3>
+                                    <p>Miercoles: 9:00 PM</p>
                                 </div>
                                 <div className="bg-white p-6 rounded-lg shadow-lg w-max mx-auto">   
                                 <img 
-                                    src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486625066_1096377335862893_6208095750383997392_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEWVTgeE_uZpWPNr3jzLU7TKApsTAPO5VYoCmxMA87lVpBd-L4T0Y3fk8mvSjy7LfgQPMqtTnKIBmECKNH8ILvg&_nc_ohc=5S5q0D7Tqm8Q7kNvgHzXGYa&_nc_oc=Adm91zAuzO09e34mnp_GvPXQc3_lVO5b1Ct_gRMuSSh_6O2CUOTBf95jHRJec2j949U&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=nhf5-0Dsb3SJPNT84fTmBg&oh=00_AYFFQn0JD-IGRbUtJrcEDbsstuR9-2VNvCSd9hQYKhwg2A&oe=67F081F7" 
+                                    src="https://scontent.fasu8-2.fna.fbcdn.net/v/t39.30808-6/480728840_1083511667149460_8080077180967174972_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHAc6JWeTENKO7mXN34VICtYU3t7_kYpUVhTe3v-RilRbk5dHT401rT7fmfv27WenEc9e2N_1l6HMB096QWbhVR&_nc_ohc=qdhTxVx_8MAQ7kNvgEfO6j8&_nc_oc=AdldeHPTm06Md-OC5_JFuGm26ZPKbJ3ITOiD98ZAHeHIPA7uom2cN7iAVCs_dRsrOzUu3u13wFq5JhhyQ7wYrTnc&_nc_zt=23&_nc_ht=scontent.fasu8-2.fna&_nc_gid=XrDnqHyZEttia_DrylmHhg&oh=00_AYEoNhKRb5VrS-JnMJ0zvPCmnKMTUWIj6G5gJ5peF-1WfA&oe=67F34A70" 
                                     alt="Iglesia Cristiana La Victoria" 
-                                    className="w-full max-w-4xl mx-auto rounded-lg shadow-lg mb-6"
+                                    className="w-full max-w-2xl mx-auto rounded-lg shadow-lg mb-6"
                                 />
-                                <p className="text-lg mb-10">Un lugar de adoración, comunión y crecimiento espiritual</p>
-                                    <h3 className="text-xl font-bold mb-10">Horarios de Servicios</h3>
-                                    <p>Domingos: 10:00 AM - Servicio Principal</p>
+                                <p className="text-lg mb-10 font-bold">Oracion</p>
+                                    <h3 className="text-xl font-bold mb-10">Culto de Oracion</h3>
+                                    <p>Domingos: 7:30 PM - Servicio Principal</p>
                                 </div>
                             
                             </div>
