--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             
                             {/* Líderes Ministeriales */}
                             <h3 className="text-2xl font-bold text-center mb-6">Líderes Ministeriales</h3>
-                            <div className="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                            <div className="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 pb-[50px]">
                                 <div className="bg-white p-4 rounded-lg shadow-lg text-center">
                                     <img 
                                         src="https://scontent.fasu6-1.fna.fbcdn.net/v/t39.30808-6/486617262_1092862926214334_3031420025094590785_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHZJV35rizwcnPE2cr9nolW-_1Rk7dE6aj7_VGTt0TpqDxOGyeBw6NRBgsD8vYedFp2ZsLRzQg83r7hPZjvKgCe&_nc_ohc=VTi2f63owCsQ7kNvgFRxIrC&_nc_oc=Adk5iONxHMtOgU5vaE9--CRWOj6sODNKsw_iEBZS8orrdL3Cd3wmjMpPX6s3O3KttVk&_nc_zt=23&_nc_ht=scontent.fasu6-1.fna&_nc_gid=cgH_8OBTgWyILTkHGr6xqQ&oh=00_AYHhV1NNUe9Utl3l5vdoxNfDF4pSRMrEf0-f_uCPt7LRdg&oe=67F099E1" 
