--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
             </div>
             <div class="redes">
                     <h4 className="">Síguenos: </h4>
+                    <div class="iconos">
                     <a href="https://www.facebook.com/iglesialavictoriapy" target="_blank">
                         <img src="https://cdn-icons-png.freepik.com/256/3579/3579093.png?semt=ais_hybrid" alt="">
                     </a>
@@ -329,6 +330,7 @@
                     <a href="https://wa.me/595985723153" target="_blank">
                         <img src="https://cdn-icons-png.freepik.com/256/733/733585.png?semt=ais_hybrid" alt="">
                     </a>
+                    </div>
                     <p>© 1958 Iglesia Cristiana La Victoria. Todos los derechos reservados.</p>
             </div>
 </footer>
